[tool.poetry]
name = "hello-fastapi"
version = "0.1.0"
description = ""
authors = ["Sud94arshan <sud944arshan@gmail.com>"]
readme = "README.md"
packages = [{include = "hello_fastapi", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
# Add your packages here instead of [project]
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlmodel = "^0.0.24"

[tool.poetry.scripts]
dev = "src.hello_fastapi.main:start"
[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"